Actually did the changes.

--- a/data/scripts/TransientDMD_surrogates-PyDMD_JOV_Latest.ipynb
+++ b/data/scripts/TransientDMD_surrogates-PyDMD_JOV_Latest.ipynb
@@ -145,7 +145,8 @@
       "patch 0 norm = 3.11e-03\n",
       "patch 1 norm = 6.64e-01\n",
       "patch 2 norm = 4.31e+04\n",
-      "final norm is 4.31e+04\n"
+      "final norm is 4.31e+04\n",
+      "elapsed time =  0.021336793899536133\n"
      ]
     },
     {
@@ -160,7 +161,8 @@
    ],
    "source": [
     "#%%  DMD analysis\n",
-    "\n",
+    "import time\n",
+    "et_0 = time.time()\n",
     "# Time step\n",
     "dt = t[1]-t[0]\n",
     "# Chop the time domain into discrete patches\n",
@@ -197,20 +199,30 @@
     "    F_norm_tmp = np.linalg.norm(tmp_reduced-dmd.reconstructed_data.real)\n",
     "    print(\"patch {} norm = {:.2e}\".format(i, F_norm_tmp))\n",
     "    F_norm += F_norm_tmp**2\n",
-    "    \n",
+    "  \n",
+    "et = time.time() - et_0\n",
+    "\n",
     "F_norm = np.sqrt(F_norm)\n",
-    "print(\"final norm is {:.2e}\".format(F_norm))"
+    "print(\"final norm is {:.2e}\".format(F_norm))\n",
+    "\n",
+    "print('elapsed time = ', et)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "/home/robertsj/opt/anaconda3/lib/python3.6/site-packages/matplotlib/font_manager.py:1328: UserWarning: findfont: Font family ['serif'] not found. Falling back to DejaVu Sans\n",
+      "  (prop.get_family(), self.defaultFamily[fontext]))\n",
+      "/home/robertsj/opt/anaconda3/lib/python3.6/site-packages/matplotlib/font_manager.py:1328: UserWarning: findfont: Font family ['serif'] not found. Falling back to DejaVu Sans\n",
+      "  (prop.get_family(), self.defaultFamily[fontext]))\n",
+      "/home/robertsj/opt/anaconda3/lib/python3.6/site-packages/matplotlib/font_manager.py:1328: UserWarning: findfont: Font family ['serif'] not found. Falling back to DejaVu Sans\n",
+      "  (prop.get_family(), self.defaultFamily[fontext]))\n",
       "/home/robertsj/opt/anaconda3/lib/python3.6/site-packages/matplotlib/font_manager.py:1328: UserWarning: findfont: Font family ['serif'] not found. Falling back to DejaVu Sans\n",
       "  (prop.get_family(), self.defaultFamily[fontext]))\n",
       "/home/robertsj/opt/anaconda3/lib/python3.6/site-packages/matplotlib/font_manager.py:1328: UserWarning: findfont: Font family ['serif'] not found. Falling back to DejaVu Sans\n",
@@ -390,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -465,7 +477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -474,7 +486,7 @@
        "1.0000000000000002e-06"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -485,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -494,7 +506,7 @@
        "1.0000000000000013"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -505,7 +517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -514,7 +526,7 @@
        "(0.01754999999999998, 0.017550000000000003)"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
