--- a/paper/bibliography.bib
+++ b/paper/bibliography.bib
@@ -32,7 +32,7 @@
 
 @article{wang2017usa,
   title={{Uncertainty and Sensitivity Analysis of TREAT Transient Test 15}},
-  author={Wang, C. and Schuner, S. and Tablot, P.W., and Baker, B. and Wang, Y. and Ortensi, J. and Gleicher, F. and DeHart, M. and Rabiti, C.},
+  author={Wang, C. and Schuner, S. and Tablot, P.W. and Baker, B. and Wang, Y. and Ortensi, J. and Gleicher, F. and DeHart, M. and Rabiti, C.},
   journal={Trans. Am. Nucl. Soc.},
   volume={116},
   pages={625--628},
@@ -157,3 +157,15 @@ title = {Kriging-based Surrogate Models for Uncertainty Quantification and Sensi
   institution={Argonne National Laboratory},
   year={1972}
 }
+
+@Misc{petsc,
+       author = {Satish Balay and Shrirang Abhyankar and Mark~F. Adams and Jed Brown and Peter Brune
+                 and Kris Buschelman and Lisandro Dalcin and Victor Eijkhout and William~D. Gropp
+                 and Dinesh Kaushik and Matthew~G. Knepley and Dave~A. May and Lois Curfman McInnes
+                 and Richard Tran Mills and Todd Munson and Karl Rupp and Patrick Sanan
+                 and Barry~F. Smith and Stefano Zampini and Hong Zhang and Hong Zhang},
+       title =  {{PETS}c {W}eb page},
+       url =    {http://www.mcs.anl.gov/petsc},
+       howpublished = {{http://www.mcs.anl.gov/petsc}},
+       year = {2018}
+     }
