--- a/paper/dmd_lra_surrogate_ans.tex
+++ b/paper/dmd_lra_surrogate_ans.tex
@@ -233,7 +233,7 @@ The total computational time for the transient was approximately 30 s, though li
 
 The snapshots of the mesh-dependent power extracted from the Detran solution were used as input for the DMD analysis. All DMD analysis presented was performed using modifications of  PyDMD \cite{demo2018pydmd}.  
  
-By inspection, it was found that isolation of the transient peak power within a small time interval led naturally to a set of three, partitioned DMD surrogates separated at $t = 1.36$ and $t = 1.5$ seconds.  The ranks used in each interval were 10, 13, and 40, each found by an iterative search to minimize the Frobenius norm of the surrogate error in each of the intervals.  Optimized amplitudes (elements of $\mathbf{b}$) were used for the first interval following Ref.~\cite{jovanovic2014sparsity}, while standard projection for the initial condition (i.e., $\mathbf{b}=\bm{\Phi}^{\dagger} \mathbf{y}_0$) was used for the second and third intervals.    The core power density and corresponding absolute, relative error are shown as a function of time in Fig.~\ref{fig:corepower}.  The core power was computed directly from the mesh powers. In addition, mesh powers are shown for $t=0$, $t=1.43$, and $t=2.00$ seconds (i.e., the intial distribution along with the distributions at each peaks) in Fig.~\ref{fig:meshpower}.  The total time to compute perform the DMD analysis and evaluate the surrogate was approximately 0.02 seconds, several orders of magnitude less than the reference diffusion solution.
+By inspection, it was found that isolation of the transient peak power within a small time interval led naturally to a set of three, partitioned DMD surrogates separated at $t = 1.36$ and $t = 1.5$ seconds.  The ranks used in each interval were 10, 13, and 40, each found by an iterative search to minimize the Frobenius norm of the surrogate error in each of the intervals.  Optimized amplitudes (elements of $\mathbf{b}$) were used for the first interval following Ref.~\cite{jovanovic2014sparsity}, while standard projection for the initial condition (i.e., $\mathbf{b}=\bm{\Phi}^{\dagger} \mathbf{y}_0$) was used for the second and third intervals.    The core power density and corresponding absolute, relative error are shown as a function of time in Fig.~\ref{fig:corepower}.  The core power was computed directly from the mesh powers. In addition, mesh powers are shown for $t=0$, $t=1.43$, and $t=2.00$ seconds (i.e., the intial distribution along with the distributions at each peaks) in Fig.~\ref{fig:meshpower}.  The total time to perform the DMD analysis and evaluate the surrogate was approximately 0.02 seconds, several orders of magnitude less than the reference diffusion solution.
 
 
 \begin{figure*}[t!]
@@ -259,7 +259,7 @@ Though promising, the quality of the approximation proved to be very sensitive t
 
 \section{Conclusions}
 
-A DMD-based surrogate was shown to represent the spatio-temporal dynamics of the LRA benchmark accurately when produced by a sequence of individual DMD surrogates in time. The benchmark exhibits a rapid severe change in dynamics within a very short time scale, which was captured by the DMD ensemble of surrogates allowing different ranks for each interval. The surrogate was able to offer a precision of $10^{-8}\%$ in the maximum power region, and a maximum error of 10\% at the very beginning of the simulation. The surrogate was shown to be sensitive to the time partitioning. Work is ongoing to mitigate this sensitivity and to provide an automated way to select the number of partitions and their boundaries.  
+A DMD-based surrogate was shown to represent the spatio-temporal dynamics of the LRA benchmark accurately when produced by a sequence of individual DMD surrogates in time. The benchmark exhibits a rapid severe change in dynamics within a very short time scale, which was captured by the DMD ensemble of surrogates allowing different ranks for each interval. The surrogate was able to offer a precision of $10^{-8}\%$ in the maximum power region, and a maximum error of 10\% at the very beginning of the simulation. The surrogate was shown to be sensitive to the time partitioning.     Work is ongoing to mitigate this sensitivity and to provide an automated way to select the number of partitions and their boundaries.  
 
 
 \section{Acknowledgments}
