Adding a python script and changing the graphics path in the presentation

--- a/paper/presentation/LRA_ANS_presentation.tex
+++ b/paper/presentation/LRA_ANS_presentation.tex
@@ -61,6 +61,7 @@
 \newcommand{\vd}{\bm{\cdot}} % slightly bold vector dot
 \newcommand{\grad}{\vec{\nabla}} % gradient
 \newcommand{\ud}{\mathop{}\!\mathrm{d}} % upright derivative symbol
+\graphicspath{{../data/images/}}
 
 \usetikzlibrary{arrows,shapes}
 \usetikzlibrary{decorations.pathreplacing,matrix, positioning}
@@ -440,7 +441,7 @@ $\vec{x}^{DMD}(t)\approx \sum_{i=1}^{r} b_i \boldsymbol{\phi}_i^{DMD} e^{\omega_
 \begin{frame}
 \frametitle{Case Study}
 \begin{figure}[ht]
-\includegraphics[scale=0.3]{Power.png}
+\includegraphics[scale=0.5]{HF_Power.pdf}
 \caption{Power from Detran}
 \end{figure}
 \end{frame}
