adding time window sensitivity study

--- a/paper/presentation/LRA_ANS_presentation.tex
+++ b/paper/presentation/LRA_ANS_presentation.tex
@@ -521,7 +521,7 @@ $\vec{x}^{DMD}(t)\approx \sum_{i=1}^{r} b_i \boldsymbol{\phi}_i^{DMD} e^{\omega_
 
 \begin{figure}[ht]
 
-\includegraphics[scale=0.3]{corepower_ranks91320.pdf}
+\includegraphics[scale=0.3]{corepower_ranks91320_t136150299.pdf}
 \caption{Partitioned DMD surrogates}
 \end{figure}
 \end{frame}
@@ -532,7 +532,7 @@ $\vec{x}^{DMD}(t)\approx \sum_{i=1}^{r} b_i \boldsymbol{\phi}_i^{DMD} e^{\omega_
  \item ranks = 8, 13, 20 respectively
 \end{itemize}
 \begin{figure}[ht]
-\includegraphics[scale=0.3]{corepower_ranks81320.pdf}
+\includegraphics[scale=0.3]{corepower_ranks81320_t136150299.pdf}
 \caption{Partitioned DMD surrogates}
 \end{figure}
 \end{frame}
@@ -545,7 +545,7 @@ $\vec{x}^{DMD}(t)\approx \sum_{i=1}^{r} b_i \boldsymbol{\phi}_i^{DMD} e^{\omega_
 
 \begin{figure}[ht]
 
-\includegraphics[scale=0.3]{corepower_ranks51320.pdf}
+\includegraphics[scale=0.3]{corepower_ranks51320_t136150299.pdf}
 \caption{Partitioned DMD surrogates}
 \end{figure}
 \end{frame}
@@ -556,7 +556,7 @@ $\vec{x}^{DMD}(t)\approx \sum_{i=1}^{r} b_i \boldsymbol{\phi}_i^{DMD} e^{\omega_
  \item ranks = 11, 13, 20 respectively
 \end{itemize}
 \begin{figure}[ht]
-\includegraphics[scale=0.3]{corepower_ranks111320.pdf}
+\includegraphics[scale=0.3]{corepower_ranks111320_t136150299.pdf}
 \caption{Partitioned DMD surrogates}
 \end{figure}
 \end{frame}
@@ -569,7 +569,7 @@ $\vec{x}^{DMD}(t)\approx \sum_{i=1}^{r} b_i \boldsymbol{\phi}_i^{DMD} e^{\omega_
 
 \begin{figure}[ht]
 
-\includegraphics[scale=0.3]{corepower_ranks121320.pdf}
+\includegraphics[scale=0.3]{corepower_ranks121320_t136150299.pdf}
 \caption{Partitioned DMD surrogates}
 \end{figure}
 \end{frame}
@@ -580,7 +580,7 @@ $\vec{x}^{DMD}(t)\approx \sum_{i=1}^{r} b_i \boldsymbol{\phi}_i^{DMD} e^{\omega_
  \item ranks = 10, 14, 20 respectively
 \end{itemize}
 \begin{figure}[ht]
-\includegraphics[scale=0.3]{corepower_ranks101420.pdf}
+\includegraphics[scale=0.3]{corepower_ranks101420_t136150299.pdf}
 \caption{Partitioned DMD surrogates}
 \end{figure}
 \end{frame}
@@ -591,7 +591,7 @@ $\vec{x}^{DMD}(t)\approx \sum_{i=1}^{r} b_i \boldsymbol{\phi}_i^{DMD} e^{\omega_
  \item ranks = 10, 15, 20 respectively
 \end{itemize}
 \begin{figure}[ht]
-\includegraphics[scale=0.3]{corepower_ranks101520.pdf}
+\includegraphics[scale=0.3]{corepower_ranks101520_t136150299.pdf}
 \caption{Partitioned DMD surrogates}
 \end{figure}
 \end{frame}
@@ -602,7 +602,7 @@ $\vec{x}^{DMD}(t)\approx \sum_{i=1}^{r} b_i \boldsymbol{\phi}_i^{DMD} e^{\omega_
  \item ranks = 10, 12, 20 respectively
 \end{itemize}
 \begin{figure}[ht]
-\includegraphics[scale=0.3]{corepower_ranks101220.pdf}
+\includegraphics[scale=0.3]{corepower_ranks101220_t136150299.pdf}
 \caption{Partitioned DMD surrogates}
 \end{figure}
 \end{frame}
@@ -613,7 +613,7 @@ $\vec{x}^{DMD}(t)\approx \sum_{i=1}^{r} b_i \boldsymbol{\phi}_i^{DMD} e^{\omega_
  \item ranks = 10, 10, 20 respectively
 \end{itemize}
 \begin{figure}[ht]
-\includegraphics[scale=0.3]{corepower_ranks101020.pdf}
+\includegraphics[scale=0.3]{corepower_ranks101020_t136150299.pdf}
 \caption{Partitioned DMD surrogates}
 \end{figure}
 \end{frame}
@@ -624,7 +624,7 @@ $\vec{x}^{DMD}(t)\approx \sum_{i=1}^{r} b_i \boldsymbol{\phi}_i^{DMD} e^{\omega_
  \item ranks = 10, 13, 25 respectively
 \end{itemize}
 \begin{figure}[ht]
-\includegraphics[scale=0.3]{corepower_ranks101325.pdf}
+\includegraphics[scale=0.3]{corepower_ranks101325_t136150299.pdf}
 \caption{Partitioned DMD surrogates}
 \end{figure}
 \end{frame}
@@ -635,7 +635,7 @@ $\vec{x}^{DMD}(t)\approx \sum_{i=1}^{r} b_i \boldsymbol{\phi}_i^{DMD} e^{\omega_
  \item ranks = 10, 13, 40 respectively
 \end{itemize}
 \begin{figure}[ht]
-\includegraphics[scale=0.3]{corepower_ranks101340.pdf}
+\includegraphics[scale=0.3]{corepower_ranks101340_t136150299.pdf}
 \caption{Partitioned DMD surrogates}
 \end{figure}
 \end{frame}
@@ -646,7 +646,7 @@ $\vec{x}^{DMD}(t)\approx \sum_{i=1}^{r} b_i \boldsymbol{\phi}_i^{DMD} e^{\omega_
  \item ranks = 10, 13, 100 respectively
 \end{itemize}
 \begin{figure}[ht]
-\includegraphics[scale=0.3]{corepower_ranks1013100.pdf}
+\includegraphics[scale=0.3]{corepower_ranks1013100_t136150299.pdf}
 \caption{Partitioned DMD surrogates}
 \end{figure}
 \end{frame}
@@ -657,11 +657,46 @@ $\vec{x}^{DMD}(t)\approx \sum_{i=1}^{r} b_i \boldsymbol{\phi}_i^{DMD} e^{\omega_
  \item ranks = 10, 13, 150 respectively
 \end{itemize}
 \begin{figure}[ht]
-\includegraphics[scale=0.3]{corepower_ranks1013150.pdf}
+\includegraphics[scale=0.3]{corepower_ranks1013150_t136150299.pdf}
 \caption{Partitioned DMD surrogates}
 \end{figure}
 \end{frame}
-  
+
+\begin{frame}
+\frametitle{Sensitivity Study: Time window perturbation}
+\begin{itemize}
+ \item windows : 1.20, 1.56, 3.00 sec
+\end{itemize}
+\begin{figure}[ht]
+\includegraphics[scale=0.3]{corepower_ranks101320_t120156299.pdf}
+\caption{Partitioned DMD surrogates}
+\end{figure}
+\end{frame}
+
+\begin{frame}
+\frametitle{Sensitivity Study: Time window perturbation}
+\begin{itemize}
+ \item windows : 1.20, 1.40, 3.00 sec
+\end{itemize}
+\begin{figure}[ht]
+\includegraphics[scale=0.3]{corepower_ranks101320_t120140299.pdf}
+\caption{Partitioned DMD surrogates}
+\end{figure}
+\end{frame}
+
+\begin{frame}
+\frametitle{Sensitivity Study: Time window perturbation}
+\begin{itemize}
+ \item windows : 1.30, 2.00, 3.00 sec
+\end{itemize}
+\begin{figure}[ht]
+\includegraphics[scale=0.3]{corepower_ranks101320_t130200299.pdf}
+\caption{Partitioned DMD surrogates}
+\end{figure}
+\end{frame}
+
+
+
    \begin{frame}
    \section{Conclusion and Future Work }
    \frametitle{Conclusion}
@@ -677,7 +712,7 @@ $\vec{x}^{DMD}(t)\approx \sum_{i=1}^{r} b_i \boldsymbol{\phi}_i^{DMD} e^{\omega_
     \section{}
 %   \section{References}    
     \begin{frame}[t,allowframebreaks]\label{lastframe}
-        \frametitle{References}
+        \frametitle{bibliography}
           \nocite{*}
         \bibliographystyle{ans}
         % make a bibliography.bib file with your references in it
