Adding a slide for LRA

--- a/paper/presentation/LRA_ANS_presentation.tex
+++ b/paper/presentation/LRA_ANS_presentation.tex
@@ -127,17 +127,19 @@ Dr. Mohammad Abdo \\
     \section{Background and Motivation}
     
     \begin{frame}
-        \frametitle{LRA Benchmark}
+        \frametitle{LRA Benchmark: aboratorium f{\"u}r Reaktorregelung und Anlagensicherung}
 \textbf{Write something about LRA and a slide or two about Detran}       
 \begin{itemize}
-       \item 
-       \item 
+       \item 2D LRA benchmark is a 2-group, quarter-core BWR.
+       \item Simplicity of the geometry renders the problem tractable personal computers
    
-       \item  
+       \item  It was used to test modern neutronics codes.
 %         
-    \item 
+    \item assemply homogenized cross section data
     
-    \item 
+    \item ramp absorption cross section is simulation control rod ejection
+    \item Originally posed as a diffusion problem, solved with coarse mesh and nodel diffusion methods.
+    \item Scruntinizes the reactivity insertion accedent. 
        
   
        \end{itemize}
