--- a/paper/presentation/LRA_ANS_presentation.tex
+++ b/paper/presentation/LRA_ANS_presentation.tex
@@ -127,8 +127,7 @@ Dr. Mohammad Abdo \\
     \section{Background and Motivation}
     
     \begin{frame}
-        \frametitle{LRA Benchmark: aboratorium f{\"u}r Reaktorregelung und Anlagensicherung}
-\textbf{Write something about LRA and a slide or two about Detran}       
+        \frametitle{LRA Benchmark: aboratorium f{\"u}r Reaktorregelung und Anlagensicherung}       
 \begin{itemize}
        \item 2D LRA benchmark is a 2-group, quarter-core BWR.
        \item Simplicity of the geometry renders the problem tractable personal computers
@@ -146,6 +145,19 @@ Dr. Mohammad Abdo \\
     \end{frame}
 
     
+    \begin{frame}
+        \frametitle{DETRAN:}       
+\begin{itemize}
+       \item A DEterministic TRANsport code originally developed by Jermey Roberts.
+       \item It ustilizes methods such as Multigroup diffusion, discrete ordinates, MOC.
+       \item features solvers for fixed source and eigenvalue problems including preconditioned-Krylov linear solvers. 
+%         
+    \item For this work, 2-group diffusion was employed to provide the data, hereinafter refered to as the high fidelity data.
+       
+  
+       \end{itemize}
+    \end{frame}
+
    % \section{Reduced Order Models} % new section title
     \begin{frame}
     \frametitle{Reduced Order Modeling}
