--- a/paper/presentation/LRA_ANS_presentation.tex
+++ b/paper/presentation/LRA_ANS_presentation.tex
@@ -127,7 +127,7 @@ Dr. Mohammad Abdo \\
     \section{Background and Motivation}
     
     \begin{frame}
-        \frametitle{LRA Benchmark: aboratorium f{\"u}r Reaktorregelung und Anlagensicherung}       
+        \frametitle{LRA Benchmark: Laboratorium f{\"u}r Reaktorregelung und Anlagensicherung}       
 \begin{itemize}
        \item 2D LRA benchmark is a 2-group, quarter-core BWR.
        \item Simplicity of the geometry renders the problem tractable personal computers
@@ -149,7 +149,7 @@ Dr. Mohammad Abdo \\
         \frametitle{DETRAN:}       
 \begin{itemize}
        \item A DEterministic TRANsport code originally developed by Jermey Roberts.
-       \item It ustilizes methods such as Multigroup diffusion, discrete ordinates, MOC.
+       \item It utilizes methods such as Multigroup diffusion, discrete ordinates, MOC.
        \item features solvers for fixed source and eigenvalue problems including preconditioned-Krylov linear solvers. 
 %         
     \item For this work, 2-group diffusion was employed to provide the data, hereinafter refered to as the high fidelity data.
